--- a/src/app/components/crud/nav/nav.component.html
+++ b/src/app/components/crud/nav/nav.component.html
@@ -14,17 +14,15 @@
   <mat-menu #Reportes="matMenu" yPosition="above">
     <button mat-menu-item routerLink="direccion" >Direccion</button>
     <button mat-menu-item routerLink="sucursales">Sucursales</button>
-    <button mat-menu-item>Empleados</button>
+    <button mat-menu-item routerLink="empleados" >Empleados</button>
+    <button mat-menu-item routerLink="usuarios" >Usuarios</button>
     <button mat-menu-item>Permiso</button>
     <button mat-menu-item>Roles</button>
-    <button mat-menu-item>Usuarios</button>
+    
   </mat-menu>
 
-<<<<<<< HEAD
 
 
-=======
->>>>>>> 681659f6004a85eab07669b989a7363909056d05
   <span class="example-spacer"></span>
   <button routerLink="/menu" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>logout</mat-icon>
