--- a/src/app/components/crud/productos/productos.component.html
+++ b/src/app/components/crud/productos/productos.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar>
-    <span>Direccion</span>
+    <span>Productos</span>
 
     <div class="example-spacer"></div>
       <button type="button"  mat-raised-button  color="primary"  data-bs-toggle="modal"  data-bs-target="#exampleModal" >Agregar</button>
@@ -17,11 +17,7 @@
               <th scope="col">Nombre</th>
               <th scope="col">Descripcion</th>
               <th scope="col">Precio</th>
-<<<<<<< HEAD
               <!-- <th scope="col">Imagen</th> -->
-=======
-              <th scope="col">Imagen</th>
->>>>>>> 681659f6004a85eab07669b989a7363909056d05
               <th scope="col">Categoria</th>
               <th scope="col">Opciones</th>
           </tr>
@@ -32,28 +28,18 @@
               <td>{{item.nombre}}</td>
               <td>{{item.descripcion}}</td>
               <td>{{item.precio}}</td>
-<<<<<<< HEAD
               <!-- <td > <img src= "{{item.imagen}}">></td> -->
-=======
-              <td > <img src= "{{item.imagen}}">></td>
->>>>>>> 681659f6004a85eab07669b989a7363909056d05
               <td>{{item.categoria}}</td>
-
               <td>
-
+              <button (click)="ListProductos(item)"  type="button" data-bs-toggle="modal"  data-bs-target="#exampleModal" class="btn btn-secondary data-bs-target="#exampleModal>Update</button>
+              <button (click)="deleteProductos(item)" class="btn btn-danger  mx-3">Delete</button>
               </td>
+              
           </tr>
       </tbody>
       </table>
     </div>
-<<<<<<< HEAD
     
-    
-
-
-
-
-
 
   <!-- Modal -->
     <div class="mat-elevation-z8">
@@ -96,9 +82,9 @@
             </div>
             <div class="modal-footer">
               <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button  type="button" (click)="addDireccion()" class="btn btn-primary">Add</button>
+              <button  type="button" (click)="addProductos()" class="btn btn-primary">Add</button>
 
-              <!-- <button  type="button" *ngIf="updateBoton" (click)="UpdateDireccion()" class="btn btn-primary">Update</button> -->
+              <button  type="button" *ngIf="updateBoton" (click)="UpdateProductos()" class="btn btn-primary">Update</button> 
 
             </div>
           </div>
@@ -112,5 +98,3 @@
 
 
 
-=======
->>>>>>> 681659f6004a85eab07669b989a7363909056d05
