prueba de fuego

--- a/src/app/components/crud/productos/productos.component.html
+++ b/src/app/components/crud/productos/productos.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar>
-    <span>Direccion</span>
+    <span>Productos</span>
 
     <div class="example-spacer"></div>
       <button type="button"  mat-raised-button  color="primary"  data-bs-toggle="modal"  data-bs-target="#exampleModal" >Agregar</button>
@@ -39,15 +39,12 @@
       </table>
     </div>
 
-<<<<<<< HEAD
 
 
 
 
 
 
-=======
->>>>>>> e5bf4e8b528797de4c42ed775fb7719395c8ee52
 
   <!-- Modal -->
     <div class="mat-elevation-z8">
