--- a/src/app/components/crud/usuario/usuario.component.html
+++ b/src/app/components/crud/usuario/usuario.component.html
@@ -8,7 +8,7 @@
 
     </mat-toolbar>
       <br>
-  
+
       <div class="mat-elevation-z3">
         <table class="table">
           <thead class="table-block">
@@ -17,7 +17,7 @@
                 <th scope="col">Usuario</th>
                 <th scope="col">Password</th>
                 <th scope="col">Id Rol</th>
-                
+
                 <th scope="col">Id Empleado</th>
                 <th scope="col">Opciones</th>
             </tr>
@@ -28,25 +28,25 @@
                 <td>{{item.usuario}}</td>
                 <td>{{item.password}}</td>
                 <td>{{item.rolId}}</td>
-              
+
                 <td>{{item.empId}}</td>
                 <td>
                 <button (click)="ListUsuarios(item)"  type="button" data-bs-toggle="modal"  data-bs-target="#exampleModal" class="btn btn-secondary data-bs-target="#exampleModal>Update</button>
                 <button (click)="deleteUsuarios(item)" class="btn btn-danger  mx-3">Delete</button>
                 </td>
-                
+
             </tr>
         </tbody>
         </table>
       </div>
-      
-      
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
     <!-- Modal -->
       <div class="mat-elevation-z8">
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -58,12 +58,12 @@
               </div>
               <div class="modal-body">
                   <form [formGroup]="formUsuario">
-  
+
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Usuario</label>
                       <input type="text" formControlName="usuario" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-  
+
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Password</label>
                         <input type="text" formControlName="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -72,30 +72,26 @@
                         <label for="exampleInputEmail1" class="form-label">Id Rol</label>
                         <input type="text" formControlName="rolId" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                       </div>
-  
+
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Id Empleado</label>
                         <input type="text" formControlName="empId" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                       </div>
-  
-                      
-  
-  
+
+
                     </form>
               </div>
               <div class="modal-footer">
                 <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button  type="button" (click)="addUsuarios()" class="btn btn-primary">Add</button>
-  
-                <button  type="button" *ngIf="updateBoton" (click)="UpdateUsuarios()" class="btn btn-primary">Update</button> 
-  
+                <button  type="button" *ngIf="addBoton"  (click)="addUsuarios()" class="btn btn-primary">Add</button>
+                <button  type="button" *ngIf="updateBoton" (click)="UpdateUsuarios()" class="btn btn-primary">Update</button>
+
               </div>
             </div>
           </div>
         </div>
-      </div>  
+      </div>
   </div>
-  
-  
-  
-  
+
+
+
