--- a/src/app/components/menu/navegacion/navegacion.component.html
+++ b/src/app/components/menu/navegacion/navegacion.component.html
@@ -9,7 +9,7 @@
 
     <button mat-button routerLink="inicio">INICIO</button>
 
-    <button mat-button [matMenuTriggerFor]="Producto">PRODUCTOS</button>
+    <button mat-button routerLink="menu" [matMenuTriggerFor]="Producto">PRODUCTOS</button>
     <button mat-button>SERVICIOS</button>
     <button mat-button>UBICACION</button>
     <button mat-button>NOSOTROS</button>
